--- a/อินเดก.html
+++ b/อินเดก.html
@@ -126,9 +126,9 @@
             "action": {
               "type": "uri",
               "label": "สมัครรับเครดิตฟรี",
-              "uri": "https://page.line.me/972zjkkj",
+              "uri": "https://lin.ee/S99fcgc",
               "altUri": {
-                "desktop": "https://page.line.me/972zjkkj"
+                "desktop": "https://lin.ee/S99fcgc"
               }
             }
           },
@@ -137,9 +137,9 @@
             "action": {
               "type": "uri",
               "label": "สอบถามเพิ่มเติม",
-              "uri": "https://page.line.me/972zjkkj",
+              "uri": "https://lin.ee/S99fcgc",
               "altUri": {
-                "desktop": "https://page.line.me/972zjkkj"
+                "desktop": "https://lin.ee/S99fcgc"
               }
             },
             "style": "primary",
@@ -220,9 +220,9 @@
             "action": {
               "type": "uri",
               "label": "สมัครรับกิจกรรม",
-              "uri": "https://page.line.me/972zjkkj",
+              "uri": "https://lin.ee/S99fcgc",
               "altUri": {
-                "desktop": "https://page.line.me/972zjkkj"
+                "desktop": "https://lin.ee/S99fcgc"
               }
             }
           },
